@@ -137,9 +137,9 @@ Config::removeScreen(const String& name)
 			m_nameToCanonicalName.erase(iter++);
 		}
 		else {
-			++index;
+            ++iter;
 		}
-	}
+    }
 }
 
 void
